--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-    "name": "RD SCOUT",
-    "short_name": "Scouting",
-    "start_url": "/index.html",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#000000",
-    "icons": [
-      {
-        "src": "LogoEquipe192x192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "LogoEquipe512x512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ]
+  "name": "RD Scout",
+  "short_name": "RD Scout",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "/LogoEquipe192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/LogoEquipe512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
